tree-sitter-dust/corpus/async.txt
================================================================================
Simple Async Statements
================================================================================

async { (output 'Whaddup') }

--------------------------------------------------------------------------------

(root
  (statement
    (block
      (statement
        (expression
          (function_call
            (function_expression
              (identifier
                (built_in_function)))
            (expression
              (value
                (string)))))))))

================================================================================
Complex Async Statements
================================================================================

async {
  if 1 % 2 == 0 {
    true
  } else {
    false
  }

  'foobar'
}

--------------------------------------------------------------------------------

(root
  (statement
    (block
      (statement
        (if_else
          (if
            (expression
              (logic
                (expression
                  (math
                    (expression
                      (value
                        (integer)))
                    (math_operator)
                    (expression
                      (value
                        (integer)))))
                (logic_operator)
                (expression
                  (value
                    (integer)))))
            (block
              (statement
                (expression
                  (value
                    (boolean))))))
          (else
            (block
              (statement
                (expression
                  (value
                    (boolean))))))))
      (statement
        (expression
          (value
            (string)))))))
