tree-sitter-dust/corpus/blocks.txt
================================================================================
Simple Block
================================================================================

{
	output(123)
}

--------------------------------------------------------------------------------

(root
  (statement
    (statement_kind
      (block
        (statement
          (statement_kind
            (expression
              (function_call
                (function_expression
                  (identifier))
                (expression
                  (value
                    (integer)))))))))))

================================================================================
Block with Return
================================================================================

{
	1
    return 4
    5
}

--------------------------------------------------------------------------------

(root
  (statement
    (statement_kind
      (block
        (statement
          (statement_kind
            (expression
              (value
                (integer)))))
        (statement
          (statement_kind
            (expression
              (value
                (integer)))))
        (statement
          (statement_kind
            (expression
              (value
                (integer)))))))))
