tree-sitter-dust/corpus/commands.txt
================================================================================
Simple Command
================================================================================

^ls

--------------------------------------------------------------------------------

(root
  (statement
    (expression
      (command
        (command_text)))))

================================================================================
Command Sequence
================================================================================

^less ^ls

--------------------------------------------------------------------------------

(root
  (statement
    (expression
      (command
        (command_text))))
  (statement
    (expression
      (command
        (command_text)))))

================================================================================
Command with Arguments
================================================================================

^ls --long -a

--------------------------------------------------------------------------------

(root
  (statement
    (expression
      (command
        (command_text)
        (command_argument)
        (command_argument)))))

================================================================================
Command Sequence with Arguments
================================================================================

^cargo run -- -c "output('hi there')"
^ls --long -a

--------------------------------------------------------------------------------

(root
  (statement
    (expression
      (command
        (command_text)
        (command_argument)
        (command_argument)
        (command_argument)
        (command_argument))))
  (statement
    (expression
      (command
        (command_text)
        (command_argument)
        (command_argument)))))

================================================================================
Command Sequence with Arguments
================================================================================

^cargo run -- -c "output('hi there')"
^ls --long -a

--------------------------------------------------------------------------------

(root
  (statement
    (expression
      (command
        (command_text)
        (command_argument)
        (command_argument)
        (command_argument)
        (command_argument))))
  (statement
    (expression
      (command
        (command_text)
        (command_argument)
        (command_argument)))))

================================================================================
Command Assignment
================================================================================

ls_output = ^ls --long -a;
cat_output = ^cat Cargo.toml;

--------------------------------------------------------------------------------

(root
  (statement
    (assignment
      (identifier)
      (assignment_operator)
      (statement
        (expression
          (command
            (command_text)
            (command_argument)
            (command_argument))))))
  (statement
    (assignment
      (identifier)
      (assignment_operator)
      (statement
        (expression
          (command
            (command_text)
            (command_argument)))))))

================================================================================
Command with Semicolon
================================================================================

ls_output = ^ls --long -a; ls_output

--------------------------------------------------------------------------------

(root
  (statement
    (assignment
      (identifier)
      (assignment_operator)
      (statement
        (expression
          (command
            (command_text)
            (command_argument)
            (command_argument))))))
  (statement
    (expression
      (identifier))))

================================================================================
Command with Semicolon
================================================================================

ls_output = ^ls --long -a; ls_output

--------------------------------------------------------------------------------

(root
  (statement
    (assignment
      (identifier)
      (assignment_operator)
      (statement
        (expression
          (command
            (command_text)
            (command_argument)
            (command_argument))))))
  (statement
    (expression
      (identifier))))

================================================================================
Command with Quoted Semicolon
================================================================================

ls_output = ^echo ';'; ls_output

--------------------------------------------------------------------------------

(root
  (statement
    (assignment
      (identifier)
      (assignment_operator)
      (statement
        (expression
          (command
            (command_text)
            (command_argument))))))
  (statement
    (expression
      (identifier))))
