tree-sitter-dust/corpus/find.txt
==================
Simple Find Loop
==================

find i in [1, 2, 3] {
  i <= 3
}

---

(root
  (statement
    (find
      (identifier)
      (expression
        (value
          (list
            (expression
              (value
                (integer)))
            (expression
              (value
                (integer)))
            (expression
              (value
                (integer))))))
      (statement
        (expression
          (logic
            (expression
              (identifier))
            (logic_operator)
            (expression
              (value
                (integer)))))))))

==================
Nested Find Loop
==================

find i in ["one", "two", "three"] {
  found = find j in i {
    i == "e"
  }

  if (type found) != 'empty' {
    true
  } else {
    false
  }
}


---

(root
  (statement
    (find
      (identifier)
      (expression
        (value
          (list
            (expression
              (value
                (string)))
            (expression
              (value
                (string)))
            (expression
              (value
                (string))))))
      (statement
        (assignment
          (identifier)
          (assignment_operator)
          (statement
            (find
              (identifier)
              (expression
                (identifier))
              (statement
                (expression
                  (logic
                    (expression
                      (identifier))
                    (logic_operator)
                    (expression
                      (value
                        (string)))))))))
        (if_else
          (if
            (expression
              (logic
                (expression
                  (tool
                    (expression
                      (identifier))))
                (logic_operator)
                (expression
                  (value
                    (string)))))
            (statement
              (expression
                (value
                  (boolean)))))
          (else
            (statement
              (expression
                (value
                  (boolean))))))))))
