tree-sitter-dust/corpus/for.txt
================================================================================
Simple For Loop
================================================================================

for i in [1, 2, 3] {
  (output i)
}

--------------------------------------------------------------------------------

(root
  (statement
    (for
      (identifier)
      (expression
        (value
          (list
            (expression
              (value
                (integer)))
            (expression
              (value
                (integer)))
            (expression
              (value
                (integer))))))
      (block
        (statement
          (expression
            (function_call
              (expression
                (identifier))
              (expression
                (identifier)))))))))

================================================================================
Nested For Loop
================================================================================

for list in list_of_lists {
  for item in list {
    (output item)
  }
}

--------------------------------------------------------------------------------

(root
  (statement
    (for
      (identifier)
      (expression
        (identifier))
      (block
        (statement
          (for
            (identifier)
            (expression
              (identifier))
            (block
              (statement
                (expression
                  (function_call
                    (expression
                      (identifier))
                    (expression
                      (identifier))))))))))))
