tree-sitter-dust/corpus/lists.txt
==================
List Declaration
==================

['answer', 42]

---

(root
  (statement
    (expression
      (value
        (list
          (expression
            (value
              (string)))
          (expression
            (value
              (integer))))))))

==================
List Nesting
==================

['answers', [42, [666]]]

---

(root
  (statement
    (expression
      (value
        (list
          (expression
            (value
              (string)))
          (expression
            (value
              (list
                (expression
                  (value
                    (integer)))
                (expression
                  (value
                    (list
                      (expression
                        (value
                          (integer))))))))))))))
