tree-sitter-dust/corpus/maps.txt
================================================================================
Simple Map
================================================================================

map { answer = 42 }

--------------------------------------------------------------------------------

(root
  (block
    (statement
      (expression
        (value
          (map
            (block
              (statement
                (assignment
                  (identifier)
                  (assignment_operator)
                  (statement
                    (expression
                      (value
                        (integer)))))))))))))

================================================================================
Nested Maps
================================================================================

x = map {
  y = map {
    foo = 'bar'
    z = map {
      message = 'hiya'
    }
  }
  f = 12
}

--------------------------------------------------------------------------------

(root
  (block
    (statement
      (assignment
        (identifier)
        (assignment_operator)
        (statement
          (expression
            (value
              (map
                (block
                  (statement
                    (assignment
                      (identifier)
                      (assignment_operator)
                      (statement
                        (expression
                          (value
                            (map
                              (block
                                (statement
                                  (assignment
                                    (identifier)
                                    (assignment_operator)
                                    (statement
                                      (expression
                                        (value
                                          (string))))))
                                (statement
                                  (assignment
                                    (identifier)
                                    (assignment_operator)
                                    (statement
                                      (expression
                                        (value
                                          (map
                                            (block
                                              (statement
                                                (assignment
                                                  (identifier)
                                                  (assignment_operator)
                                                  (statement
                                                    (expression
                                                      (value
                                                        (string))))))))))))))))))))
                  (statement
                    (assignment
                      (identifier)
                      (assignment_operator)
                      (statement
                        (expression
                          (value
                            (integer)))))))))))))))
